--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: BY Blog
-SEOTitle: FRANCA的博客 | BY Blog
+title: FRANCA Blog
+SEOTitle: FRANCA的博客 | FRANCA Blog
 header-img: img/post-bg-desk.jpg
 email: 
 description: "Every failure is leading towards success."
@@ -94,11 +94,8 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
-    },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
+        title: "简书",
+        href: "http://www.jianshu.com/"
     },{
         title: "Apple",
         href: "https://apple.com"
