--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: FRANCA Blog
-SEOTitle: FRANCA的博客 | FRANCA Blog
+title: FRANCA BLOG
+SEOTitle: FRANCA的博客 | FRANCA BLOG
 header-img: img/post-bg-desk.jpg
-email: 
+email:
 description: "Every failure is leading towards success."
 keyword: "FRANCA的博客, fpfgithub, php"
 url: "http://fpfgithub.github.io"          # your host, for absolute URL
@@ -92,15 +92,15 @@ service-worker: true
 
 
 # Friends
-friends: [
-    {
-        title: "简书",
-        href: "http://www.jianshu.com/"
-    },{
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
-    }
-]
+# friends: [
+#     {
+#         title: "简书",
+#         href: "http://www.jianshu.com/"
+#     },{
+#         title: "Apple",
+#         href: "https://apple.com"
+#     },{
+#         title: "Apple Developer",
+#         href: "https://developer.apple.com/"
+#     }
+# ]
